DevTools: fix editing of style tag contents

This patch starts resetting the InspectorResourceContainer storage for
the externally changed style tags so that old content doesn't stuck.

BUG=758600
R=dgozman

Change-Id: I655be7269a2d2b502bbbe6967a3849696d619b28
Reviewed-on: https://chromium-review.googlesource.com/826023
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Andrey Lushnikov <lushnikov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523963}
Former-commit-id: b2a070f602aba46995046064931a9070604ef459