third_party/WebKit/Source/core/css/StyleElement.cpp
@@ -33,6 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "core/frame/LocalFrame.h"
 #include "core/frame/csp/ContentSecurityPolicy.h"
 #include "core/html/HTMLStyleElement.h"
+#include "core/probe/CoreProbes.h"
 #include "core/svg/SVGStyleElement.h"
 #include "platform/instrumentation/tracing/TraceEvent.h"
 #include "platform/wtf/text/StringBuilder.h"
@@ -93,7 +94,7 @@ void StyleElement::RemovedFrom(Element& element,
 StyleElement::ProcessingResult StyleElement::ChildrenChanged(Element& element) {
   if (created_by_parser_)
     return kProcessingSuccessful;
-
+  probe::willChangeStyleElement(&element);
   return Process(element);
 }
 
